Refactor RAG backend and add PDF preprocessing
Updated database schema for document chunking and session management. Added new PDF preprocessing and conversion modules, improved markdown and table handling in notebooks, and refactored main FastAPI app to support RAGProcessor2. Various output and image files added for upstage output and chroma DB. Removed temp_table.csv.

--- a/deeplearning/RAG/pyqt6_test.ipynb
+++ b/deeplearning/RAG/pyqt6_test.ipynb
@@ -21,37 +21,29 @@
       "--- 'documents' 테이블 데이터 ---\n",
       "document_id: 1\n",
       "user_id: 1\n",
-      "file_name: manual.pdf\n",
-      "file_path: uploads\\1643234e2a394271b39f3b7f0fe33e76_manual.pdf\n",
+      "file_name: manual (2).pdf\n",
+      "file_path: uploads\\c8712956cc734fe3af302861fec56ca2_manual (2).pdf\n",
       "status: 완료\n",
-      "uploaded_at: 2025-07-11 15:41:35\n",
+      "uploaded_at: 2025-07-19 02:05:56\n",
       "---------------------------------\n",
       "\n",
       "연결이 종료되었습니다.\n",
       "\n",
       "--- 'qna_logs' 테이블 데이터 ---\n",
       "qna_id: 1\n",
-      "session_id: 82d2f36f-0122-4cf0-806d-10a52fdaa3df\n",
-      "user_question: 위 pdf의 내용을 간단하게 두 줄로 요약해줘\n",
-      "model_answer: 이 문서는 선정 랩의 보조금 사용 및 사업비 관리에 대한 규정을 담고 있습니다. \n",
-      "특히, 계열사 거래 제한, 조달청 이용 의무, 특정 지출 항목 제한(유류비, 여유자금 등), 그리고 프로젝트 관련 외 지출 제한 등의 사항을 명시하고 있습니다. 또한, 별도 계좌 개설 및 전용 사업비 카드 사용, 사업계획 준수 등의 원칙을 강조하고 있습니다.\n",
-      "retrieved_context: ○ 선정 랩의 임직원(직계존비속을 포함) 등이 운영하는 업체 또는 단체 계열 관계에 있는 업체 또는 단체와는 거래할 수 없음  \n",
-      "※ 컨소시엄 간 계약 불가  \n",
-      "○ 보조금이 투명하고 효율적인 집행을 위하여 수요물자 구매나 시설공사계약을 체결할 때 아래의 금액에 한하여 조달청(나라장터 등)을 이용해야 함  \n",
-      "- 2천만원을 초과하는 물품 및 용역 구매  \n",
-      "- 2억원을 초과하는 시설공사 계약  \n",
-      "○ 모든 증빙서류는 사업기간 종료 후 5년간 보관해야 하며, 협회가 요구할시 즉시 응하여야 함  \n",
-      "○ 정부지원금은 콘텐츠 제작 관련 이외의 용도로 사용할 수 없음 < 정부지원금 사용 불가항목 >  \n",
-      "o 유류비 사용 o 유흥업소 등에서의 사용금액 o 자가시설 이용료, 감가상각비 o 사업과 관련 없는 자체보유 저작권료 o 관세, 부가세 등 환급이나 공제받는 금액 o 술/담배 등의 기호상품에 대한 사용 o 본 사업의 목적과 관련 없는 공간 임차료 o 이외 ICT사업 비목별 불인정 기준\n",
-      "---\n",
-      "○ 선정 랩의 임직원(직계존비속을 포함) 등이 운영하는 업체 또는 단체 계열 관계에 있는 업체 또는 단체와는 거래할 수 없음  \n",
-      "※ 컨소시엄 간 계약 불가  \n",
-      "○ 보조금이 투명하고 효율적인 집행을 위하여 수요물자 구매나 시설공사계약을 체결할 때 아래의 금액에 한하여 조달청(나라장터 등)을 이용해야 함  \n",
-      "- 2천만원을 초과하는 물품 및 용역 구매  \n",
-      "- 2억원을 초과하는 시설공사 계약  \n",
-      "○ 모든 증빙서류는 사업기간 종료 후 5년간 보관해야 하며, 협회가 요구할시 즉시 응하여야 함  \n",
-      "○ 정부지원금은 콘텐츠 제작 관련 이외의 용도로 사용할 수 없음 < 정부지원금 사용 불가항목 >  \n",
-      "o 유류비 사용 o 유흥업소 등에서의 사용금액 o 자가시설 이용료, 감가상각비 o 사업과 관련 없는 자체보유 저작권료 o 관세, 부가세 등 환급이나 공제받는 금액 o 술/담배 등의 기호상품에 대한 사용 o 본 사업의 목적과 관련 없는 공간 임차료 o 이외 ICT사업 비목별 불인정 기준\n",
+      "session_id: dcebcf93-b933-4a83-831b-0cf3ffa0e176\n",
+      "user_question: 박사과정생의 월급은?\n",
+      "model_answer: 랩 참여인력별 등급 및 월 임금기준에 따르면 박사과정의 경우 월 임금은 3,000,000원 이상입니다.\n",
+      "retrieved_context: < 랩 참여인력별 등급 및 월 임금기준* >  \n",
+      "등 급 월 임금 (100%참여율 기준) 자 격 기 준 박사후연구원 소속기관 인건비 지급기준 박사 학위를 보유한자 박사과정 월 3,000,000원 이상 박사 대학원 과정인자 석사과정 월 2,200,000원 이상 석사 대학원 과정인자 학사과정 월 1,300,000원 이상 회계, 정산, 예산 등 업무처리를 수행하는 자  \n",
+      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
+      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
+      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
+      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
+      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
+      "당해 연구분야에 대해 석사급 전문지식을 보유한 자,  \n",
+      "콘텐츠 사업 및 R&D 수행하는 자로써 학사과정인자,  \n",
+      "※ 통합과정의 경우 학사, 석사, 박사과정의 기준을 고려하여 소속기관의 장이 별도로 정한 금액으로 월 임금 기준 편성\n",
       "---\n",
       "※ 주관기관, 참여기관 사업비 편성 시 여비는 각 기관별로 산출하여 편성해야 함 ○ 모든 지출은 지출 원인행위 및 지출결과에 대해 증빙할 수 있는 증빙서류가 구비 되어야 하며, 지출목적이 합당한 경우에만 인정함 ※ [붙임] ICT사업 사업비 산정 및 정산 등에 관한 기준 및 세부내용 참조  \n",
       "- 16 -  \n",
@@ -66,18 +58,9 @@
       "※ 월 임금 3,000,000원 기준 : 과제 참여율 50%(1,500,000원)로 편성할 경우, 편성된 참여율의 100%(1,500,000원)까지 인정  \n",
       "< 랩 참여인력별 등급 및 월 임금기준* >\n",
       "---\n",
-      "※ 주관기관, 참여기관 사업비 편성 시 여비는 각 기관별로 산출하여 편성해야 함 ○ 모든 지출은 지출 원인행위 및 지출결과에 대해 증빙할 수 있는 증빙서류가 구비 되어야 하며, 지출목적이 합당한 경우에만 인정함 ※ [붙임] ICT사업 사업비 산정 및 정산 등에 관한 기준 및 세부내용 참조  \n",
-      "- 16 -  \n",
-      "3  \n",
-      "인건비 편성  \n",
-      "□ 인건비 편성  \n",
-      "○ 아래 랩 참여인력별 등급 및 월 임금기준에 따라 참여인력 인건비 지원  \n",
-      "- 참여인력 중 대학 및 대학원 교수 직위자들은 인건비 지급을 불인정하고 그 외 참여인력에 대해서는 100%까지 인정  \n",
-      "예) 1) 교수 직위자  \n",
-      "※ 지원대학(기업) 교수 직위자의 인건비는 불인정  \n",
-      "2) 그 외 참여 인력(박사과정의 경우)  \n",
-      "※ 월 임금 3,000,000원 기준 : 과제 참여율 50%(1,500,000원)로 편성할 경우, 편성된 참여율의 100%(1,500,000원)까지 인정  \n",
-      "< 랩 참여인력별 등급 및 월 임금기준* >\n",
+      "※ 본 인건비 기준단가는 참여율 100%로 산정한 것이며, 참여율을 달리하는 경우 증감하여 적용  \n",
+      "* 국가연구개발사업 연구개발비 사용기준 제 40조(정부출연기관 학생인건비 사용기준) 준용  \n",
+      "- 17 -\n",
       "---\n",
       "2 사업비 계좌관리 및 사용원칙  \n",
       "□ 사업비 계좌관리  \n",
@@ -88,186 +71,30 @@
       "- 15 -  \n",
       "○ 부가가치세, 관세 등 사후 환급이나 공제받을 수 있는 금액은 집행금액에서 제외함을 원칙으로 하되, 사후 환급이 불가능한 경우에는 예외로 함  \n",
       "○ 보조금의 적정한 사용을 위하여 프로젝트와 관련 없는 집행과 제한 업종 가맹점 등에서는 전용 사업비 카드를 사용할 수 없음\n",
-      "timestamp: 2025-07-11 15:41:58\n",
-      "qna_id: 2\n",
-      "session_id: 82d2f36f-0122-4cf0-806d-10a52fdaa3df\n",
-      "user_question: 그럼 박사과정생의 월금은 얼마야?\n",
-      "model_answer: 박사과정생의 경우 월 임금 3,000,000원 기준으로 과제 참여율 50%(1,500,000원)로 편성할 경우, 편성된 참여율의 100%(1,500,000원)까지 인정받을 수 있습니다.\n",
-      "retrieved_context: < 랩 참여인력별 등급 및 월 임금기준* >  \n",
-      "등 급 월 임금 (100%참여율 기준) 자 격 기 준 박사후연구원 소속기관 인건비 지급기준 박사 학위를 보유한자 박사과정 월 3,000,000원 이상 박사 대학원 과정인자 석사과정 월 2,200,000원 이상 석사 대학원 과정인자 학사과정 월 1,300,000원 이상 회계, 정산, 예산 등 업무처리를 수행하는 자  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 석사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업 및 R&D 수행하는 자로써 학사과정인자,  \n",
-      "※ 통합과정의 경우 학사, 석사, 박사과정의 기준을 고려하여 소속기관의 장이 별도로 정한 금액으로 월 임금 기준 편성\n",
       "---\n",
-      "< 랩 참여인력별 등급 및 월 임금기준* >  \n",
-      "등 급 월 임금 (100%참여율 기준) 자 격 기 준 박사후연구원 소속기관 인건비 지급기준 박사 학위를 보유한자 박사과정 월 3,000,000원 이상 박사 대학원 과정인자 석사과정 월 2,200,000원 이상 석사 대학원 과정인자 학사과정 월 1,300,000원 이상 회계, 정산, 예산 등 업무처리를 수행하는 자  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 석사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업 및 R&D 수행하는 자로써 학사과정인자,  \n",
-      "※ 통합과정의 경우 학사, 석사, 박사과정의 기준을 고려하여 소속기관의 장이 별도로 정한 금액으로 월 임금 기준 편성\n",
-      "---\n",
-      "※ 주관기관, 참여기관 사업비 편성 시 여비는 각 기관별로 산출하여 편성해야 함 ○ 모든 지출은 지출 원인행위 및 지출결과에 대해 증빙할 수 있는 증빙서류가 구비 되어야 하며, 지출목적이 합당한 경우에만 인정함 ※ [붙임] ICT사업 사업비 산정 및 정산 등에 관한 기준 및 세부내용 참조  \n",
-      "- 16 -  \n",
-      "3  \n",
-      "인건비 편성  \n",
-      "□ 인건비 편성  \n",
-      "○ 아래 랩 참여인력별 등급 및 월 임금기준에 따라 참여인력 인건비 지원  \n",
-      "- 참여인력 중 대학 및 대학원 교수 직위자들은 인건비 지급을 불인정하고 그 외 참여인력에 대해서는 100%까지 인정  \n",
-      "예) 1) 교수 직위자  \n",
-      "※ 지원대학(기업) 교수 직위자의 인건비는 불인정  \n",
-      "2) 그 외 참여 인력(박사과정의 경우)  \n",
-      "※ 월 임금 3,000,000원 기준 : 과제 참여율 50%(1,500,000원)로 편성할 경우, 편성된 참여율의 100%(1,500,000원)까지 인정  \n",
-      "< 랩 참여인력별 등급 및 월 임금기준* >\n",
-      "---\n",
-      "※ 주관기관, 참여기관 사업비 편성 시 여비는 각 기관별로 산출하여 편성해야 함 ○ 모든 지출은 지출 원인행위 및 지출결과에 대해 증빙할 수 있는 증빙서류가 구비 되어야 하며, 지출목적이 합당한 경우에만 인정함 ※ [붙임] ICT사업 사업비 산정 및 정산 등에 관한 기준 및 세부내용 참조  \n",
-      "- 16 -  \n",
-      "3  \n",
-      "인건비 편성  \n",
-      "□ 인건비 편성  \n",
-      "○ 아래 랩 참여인력별 등급 및 월 임금기준에 따라 참여인력 인건비 지원  \n",
-      "- 참여인력 중 대학 및 대학원 교수 직위자들은 인건비 지급을 불인정하고 그 외 참여인력에 대해서는 100%까지 인정  \n",
-      "예) 1) 교수 직위자  \n",
-      "※ 지원대학(기업) 교수 직위자의 인건비는 불인정  \n",
-      "2) 그 외 참여 인력(박사과정의 경우)  \n",
-      "※ 월 임금 3,000,000원 기준 : 과제 참여율 50%(1,500,000원)로 편성할 경우, 편성된 참여율의 100%(1,500,000원)까지 인정  \n",
-      "< 랩 참여인력별 등급 및 월 임금기준* >\n",
-      "---\n",
-      "※ 본 인건비 기준단가는 참여율 100%로 산정한 것이며, 참여율을 달리하는 경우 증감하여 적용  \n",
-      "* 국가연구개발사업 연구개발비 사용기준 제 40조(정부출연기관 학생인건비 사용기준) 준용  \n",
-      "- 17 -\n",
-      "timestamp: 2025-07-11 15:43:39\n",
-      "qna_id: 3\n",
-      "session_id: 82d2f36f-0122-4cf0-806d-10a52fdaa3df\n",
-      "user_question: 학사과정생의 월급은?\n",
-      "model_answer: 학사과정생의 경우 월 임금은 1,300,000원입니다.\n",
-      "retrieved_context: < 랩 참여인력별 등급 및 월 임금기준* >  \n",
-      "등 급 월 임금 (100%참여율 기준) 자 격 기 준 박사후연구원 소속기관 인건비 지급기준 박사 학위를 보유한자 박사과정 월 3,000,000원 이상 박사 대학원 과정인자 석사과정 월 2,200,000원 이상 석사 대학원 과정인자 학사과정 월 1,300,000원 이상 회계, 정산, 예산 등 업무처리를 수행하는 자  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 석사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업 및 R&D 수행하는 자로써 학사과정인자,  \n",
-      "※ 통합과정의 경우 학사, 석사, 박사과정의 기준을 고려하여 소속기관의 장이 별도로 정한 금액으로 월 임금 기준 편성\n",
-      "---\n",
-      "< 랩 참여인력별 등급 및 월 임금기준* >  \n",
-      "등 급 월 임금 (100%참여율 기준) 자 격 기 준 박사후연구원 소속기관 인건비 지급기준 박사 학위를 보유한자 박사과정 월 3,000,000원 이상 박사 대학원 과정인자 석사과정 월 2,200,000원 이상 석사 대학원 과정인자 학사과정 월 1,300,000원 이상 회계, 정산, 예산 등 업무처리를 수행하는 자  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 석사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업 및 R&D 수행하는 자로써 학사과정인자,  \n",
-      "※ 통합과정의 경우 학사, 석사, 박사과정의 기준을 고려하여 소속기관의 장이 별도로 정한 금액으로 월 임금 기준 편성\n",
-      "---\n",
-      "※ 주관기관, 참여기관 사업비 편성 시 여비는 각 기관별로 산출하여 편성해야 함 ○ 모든 지출은 지출 원인행위 및 지출결과에 대해 증빙할 수 있는 증빙서류가 구비 되어야 하며, 지출목적이 합당한 경우에만 인정함 ※ [붙임] ICT사업 사업비 산정 및 정산 등에 관한 기준 및 세부내용 참조  \n",
-      "- 16 -  \n",
-      "3  \n",
-      "인건비 편성  \n",
-      "□ 인건비 편성  \n",
-      "○ 아래 랩 참여인력별 등급 및 월 임금기준에 따라 참여인력 인건비 지원  \n",
-      "- 참여인력 중 대학 및 대학원 교수 직위자들은 인건비 지급을 불인정하고 그 외 참여인력에 대해서는 100%까지 인정  \n",
-      "예) 1) 교수 직위자  \n",
-      "※ 지원대학(기업) 교수 직위자의 인건비는 불인정  \n",
-      "2) 그 외 참여 인력(박사과정의 경우)  \n",
-      "※ 월 임금 3,000,000원 기준 : 과제 참여율 50%(1,500,000원)로 편성할 경우, 편성된 참여율의 100%(1,500,000원)까지 인정  \n",
-      "< 랩 참여인력별 등급 및 월 임금기준* >\n",
-      "---\n",
-      "※ 주관기관, 참여기관 사업비 편성 시 여비는 각 기관별로 산출하여 편성해야 함 ○ 모든 지출은 지출 원인행위 및 지출결과에 대해 증빙할 수 있는 증빙서류가 구비 되어야 하며, 지출목적이 합당한 경우에만 인정함 ※ [붙임] ICT사업 사업비 산정 및 정산 등에 관한 기준 및 세부내용 참조  \n",
-      "- 16 -  \n",
-      "3  \n",
-      "인건비 편성  \n",
-      "□ 인건비 편성  \n",
-      "○ 아래 랩 참여인력별 등급 및 월 임금기준에 따라 참여인력 인건비 지원  \n",
-      "- 참여인력 중 대학 및 대학원 교수 직위자들은 인건비 지급을 불인정하고 그 외 참여인력에 대해서는 100%까지 인정  \n",
-      "예) 1) 교수 직위자  \n",
-      "※ 지원대학(기업) 교수 직위자의 인건비는 불인정  \n",
-      "2) 그 외 참여 인력(박사과정의 경우)  \n",
-      "※ 월 임금 3,000,000원 기준 : 과제 참여율 50%(1,500,000원)로 편성할 경우, 편성된 참여율의 100%(1,500,000원)까지 인정  \n",
-      "< 랩 참여인력별 등급 및 월 임금기준* >\n",
-      "---\n",
-      "※ 본 인건비 기준단가는 참여율 100%로 산정한 것이며, 참여율을 달리하는 경우 증감하여 적용  \n",
-      "* 국가연구개발사업 연구개발비 사용기준 제 40조(정부출연기관 학생인건비 사용기준) 준용  \n",
-      "- 17 -\n",
-      "timestamp: 2025-07-11 15:44:11\n",
-      "qna_id: 4\n",
-      "session_id: 82d2f36f-0122-4cf0-806d-10a52fdaa3df\n",
-      "user_question: 석사과정생의 월급은?\n",
-      "model_answer: 석사과정의 경우 월 임금 2,200,000원 이상입니다.\n",
-      "retrieved_context: < 랩 참여인력별 등급 및 월 임금기준* >  \n",
-      "등 급 월 임금 (100%참여율 기준) 자 격 기 준 박사후연구원 소속기관 인건비 지급기준 박사 학위를 보유한자 박사과정 월 3,000,000원 이상 박사 대학원 과정인자 석사과정 월 2,200,000원 이상 석사 대학원 과정인자 학사과정 월 1,300,000원 이상 회계, 정산, 예산 등 업무처리를 수행하는 자  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 석사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업 및 R&D 수행하는 자로써 학사과정인자,  \n",
-      "※ 통합과정의 경우 학사, 석사, 박사과정의 기준을 고려하여 소속기관의 장이 별도로 정한 금액으로 월 임금 기준 편성\n",
-      "---\n",
-      "< 랩 참여인력별 등급 및 월 임금기준* >  \n",
-      "등 급 월 임금 (100%참여율 기준) 자 격 기 준 박사후연구원 소속기관 인건비 지급기준 박사 학위를 보유한자 박사과정 월 3,000,000원 이상 박사 대학원 과정인자 석사과정 월 2,200,000원 이상 석사 대학원 과정인자 학사과정 월 1,300,000원 이상 회계, 정산, 예산 등 업무처리를 수행하는 자  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 박사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업, R&D 등 역할을 수행하는 실무자로,  \n",
-      "당해 연구분야에 대해 석사급 전문지식을 보유한 자,  \n",
-      "콘텐츠 사업 및 R&D 수행하는 자로써 학사과정인자,  \n",
-      "※ 통합과정의 경우 학사, 석사, 박사과정의 기준을 고려하여 소속기관의 장이 별도로 정한 금액으로 월 임금 기준 편성\n",
-      "---\n",
-      "※ 주관기관, 참여기관 사업비 편성 시 여비는 각 기관별로 산출하여 편성해야 함 ○ 모든 지출은 지출 원인행위 및 지출결과에 대해 증빙할 수 있는 증빙서류가 구비 되어야 하며, 지출목적이 합당한 경우에만 인정함 ※ [붙임] ICT사업 사업비 산정 및 정산 등에 관한 기준 및 세부내용 참조  \n",
-      "- 16 -  \n",
-      "3  \n",
-      "인건비 편성  \n",
-      "□ 인건비 편성  \n",
-      "○ 아래 랩 참여인력별 등급 및 월 임금기준에 따라 참여인력 인건비 지원  \n",
-      "- 참여인력 중 대학 및 대학원 교수 직위자들은 인건비 지급을 불인정하고 그 외 참여인력에 대해서는 100%까지 인정  \n",
-      "예) 1) 교수 직위자  \n",
-      "※ 지원대학(기업) 교수 직위자의 인건비는 불인정  \n",
-      "2) 그 외 참여 인력(박사과정의 경우)  \n",
-      "※ 월 임금 3,000,000원 기준 : 과제 참여율 50%(1,500,000원)로 편성할 경우, 편성된 참여율의 100%(1,500,000원)까지 인정  \n",
-      "< 랩 참여인력별 등급 및 월 임금기준* >\n",
-      "---\n",
-      "※ 주관기관, 참여기관 사업비 편성 시 여비는 각 기관별로 산출하여 편성해야 함 ○ 모든 지출은 지출 원인행위 및 지출결과에 대해 증빙할 수 있는 증빙서류가 구비 되어야 하며, 지출목적이 합당한 경우에만 인정함 ※ [붙임] ICT사업 사업비 산정 및 정산 등에 관한 기준 및 세부내용 참조  \n",
-      "- 16 -  \n",
-      "3  \n",
-      "인건비 편성  \n",
-      "□ 인건비 편성  \n",
-      "○ 아래 랩 참여인력별 등급 및 월 임금기준에 따라 참여인력 인건비 지원  \n",
-      "- 참여인력 중 대학 및 대학원 교수 직위자들은 인건비 지급을 불인정하고 그 외 참여인력에 대해서는 100%까지 인정  \n",
-      "예) 1) 교수 직위자  \n",
-      "※ 지원대학(기업) 교수 직위자의 인건비는 불인정  \n",
-      "2) 그 외 참여 인력(박사과정의 경우)  \n",
-      "※ 월 임금 3,000,000원 기준 : 과제 참여율 50%(1,500,000원)로 편성할 경우, 편성된 참여율의 100%(1,500,000원)까지 인정  \n",
-      "< 랩 참여인력별 등급 및 월 임금기준* >\n",
-      "---\n",
-      "※ 본 인건비 기준단가는 참여율 100%로 산정한 것이며, 참여율을 달리하는 경우 증감하여 적용  \n",
-      "* 국가연구개발사업 연구개발비 사용기준 제 40조(정부출연기관 학생인건비 사용기준) 준용  \n",
-      "- 17 -\n",
-      "timestamp: 2025-07-11 15:47:31\n",
+      "Ⅴ 사업비 집행 및 정산지침  \n",
+      "OE  \n",
+      "사업비 지급 및 집행기간  \n",
+      "□ 사업비 지급  \n",
+      "1~2분기 3~4분기 1회차 2회차 3회차 4회차 신청 지급 신청 지급 신청 지급 신청 지급 시기 비율 시기 비율 시기 비율 시기 비율 협약 중간 협약 체결 시 20% 체결 후 2개월 46% 평가 후 1개월 9% 4분기 (10월) 25% 이내 이내  \n",
+      "※ 지급비율은 변동될 수 있으며, 중간평가 결과에 따라 3회차부터 지급을 유예할 수 있음  \n",
+      "□ 사업비 집행기간  \n",
+      "○ ’24. 1. 1. ~ ’24. 12. 31.  \n",
+      "※ 동 기간 이외의 사용금액은 불인정 금액으로 간주하고 전액 반납해야 함 ※ 단, 집행기간 연장에 대해서 사전 승인을 받을 시에는 그 기한까지는 인정  \n",
+      "2 사업비 계좌관리 및 사용원칙  \n",
+      "□ 사업비 계좌관리\n",
+      "timestamp: 2025-07-19 02:06:46\n",
       "---------------------------------\n",
       "\n",
       "연결이 종료되었습니다.\n",
       "\n",
       "--- 'sessions' 테이블 데이터 ---\n",
-      "session_id: 82d2f36f-0122-4cf0-806d-10a52fdaa3df\n",
+      "session_id: dcebcf93-b933-4a83-831b-0cf3ffa0e176\n",
       "user_id: 1\n",
       "document_id: 1\n",
-      "session_title: manual.pdf\n",
-      "created_at: 2025-07-11 15:41:35\n",
-      "updated_at: 2025-07-11 15:41:35\n",
+      "session_title: manual (2).pdf\n",
+      "created_at: 2025-07-19 02:05:57\n",
+      "updated_at: 2025-07-19 02:05:57\n",
       "---------------------------------\n",
       "\n",
       "연결이 종료되었습니다.\n",
@@ -276,7 +103,7 @@
       "user_id: 1\n",
       "email: minjae0327@gmail.com\n",
       "password_hash: hashed_lovepool\n",
-      "created_at: 2025-07-11 15:41:30\n",
+      "created_at: 2025-07-19 02:05:51\n",
       "---------------------------------\n",
       "\n",
       "연결이 종료되었습니다.\n",
@@ -291,31 +118,27 @@
     "dm = DatabaseManager()\n",
     "\n",
     "# dm.clear_all_data_from_tables()\n",
-    "dm.check_all_tables_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c6602671",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pyqt 디자인 해보기\n",
-    "# rag 성능개선은 어떻게?"
+    "# dm.drop_table(\"QnA_Logs\")\n",
+    "# dm.drop_table(\"Document_Chunks\")\n",
+    "# dm.drop_table(\"Sessions\")\n",
+    "# dm.drop_table(\"Documents\")\n",
+    "# dm.drop_table(\"Users\")\n",
+    "# dm.setup_tables()\n",
+    "dm.check_all_tables_data()\n",
+    "# dm.clear_all_data_from_tables()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07f5aeb6",
+   "id": "94f9ef6f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d3c90d31",
    "metadata": {},
    "outputs": [
@@ -323,11 +146,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_24784\\1394793849.py:126: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
+      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_22628\\1394793849.py:126: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
       "  super().__init__()\n",
-      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_24784\\1394793849.py:15: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
+      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_22628\\1394793849.py:15: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
       "  super().__init__(parent)\n",
-      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_24784\\1394793849.py:67: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
+      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_22628\\1394793849.py:67: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
       "  super().__init__(parent)\n"
      ]
     },
