--- a/deeplearning/RAG/my_RAG copy 2.ipynb
+++ b/deeplearning/RAG/my_RAG copy 2.ipynb
@@ -51,13 +51,13 @@
     "import torch\n",
     "\n",
     "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cuda\" if torch.backends.mps.is_available() else \"cpu\")\n",
     "device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dbbc7195",
    "metadata": {},
    "outputs": [],
@@ -76,61 +76,84 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/miniconda3/envs/rag/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "## 국내여비 지급기준(일부 발췌)\n",
+      "## Ⅴ   사업비 집행 및 정산지침\n",
       "\n",
-      "| 구 분                                    | 운         | 운         | 임    | 임     | 일 비 (1일당)   | 숙박비 (1야당)   | 식 비 (1일당)   |\n",
-      "|------------------------------------------|------------|------------|-------|--------|-----------------|------------------|-----------------|\n",
-      "| 구 분                                    | 철 도      | 선 박      | 항 공 | 자동차 | 일 비 (1일당)   | 숙박비 (1야당)   | 식 비 (1일당)   |\n",
-      "| 교 수 부 교 수 5급(부참사) 이상 사무직원 | KTX (특실) | 2 등 정 액 | 〃    | 〃     | ￦30,000        | ￦100,000        | ￦40,000        |\n",
-      "| 조 교 수 전 임 강 사 일 반 직 원         | KTX (보통) | 〃         | 〃    | 〃     | ￦30,000        | ￦100,000        | ￦40,000        |\n",
-      "| 조 교 사무보조원 일 용 직                | KTX (보통) | 〃         | 〃    | 〃     | ￦20,000        | ￦80,000         | ￦30,000        |\n",
+      "## 1 사업비 지급 및 집행기간\n",
       "\n",
-      "- 1. 고속철도 운행구간이 아닌 경우에는 새마을호 요금을 적용한다\n",
-      "- 2. KTX 및 철도를 이용할 수 없는 경우에는 고속버스(우등) 요금을 적용한다.\n",
-      "- 3. 운임 등이 할인되는 경우 할인요금을 지급한다.\n",
-      "- 4. 도서 및 벽지의 경우에는 실비 기준으로 지급할 수 있다.\n",
-      "- 5. 자가용 승용차를 이용하여 공무 및 연구활동을 수행하는 경우의 운임은 철도운임 또는 버스 운임으로 한다. 다만, 공무의 형편상 부득이한 사유로 자가용 승용차를 이용한 경우에는 연료 비 및 통행료 등을 지급할 수 있고 구체적인 지급기준은 별도로 정한다.\n",
-      "- 6. 워크숍, 세미나, 학회 등에 참석하기 위해 출장을 가는 경우 해당 주관기관에서 시행한 공 문 등에서 별표의 금액을 초과하는 숙박비 금액을 명시하거나 숙박기관을 지정한 때에는 그 금 액을 선지급하고 주관기관에서 시행한 참석확인 공문 또는 증빙서류 등을 제출한다 .\n",
+      "<!-- image -->\n",
       "\n",
-      "## 공무형편상 부득이한 사유\n",
+      "## □ 사업비 지급\n",
       "\n",
-      "- ○ 산간오지, 도서벽지 등 대중교통수단이 없어 자가용을 이용할 수 밖에 없는 경우\n",
-      "- ○ 출장경로가 매우 복잡다양하여 대중교통을 사실상 이용할 수 없는 경우 ․\n",
-      "- ○ 공무목적상 부득이한 심야시간대 이동 또는 긴급한 사유가 있는 경우\n",
-      "- ○ 하중이 무거운 수하물을 운송해야 하는 경우 등\n",
-      "- ※ 근거리 지역구분\n",
+      "| 1~2분기      | 1~2분기   | 1~2분기                 | 1~2분기   | 3~4분기                 | 3~4분기   | 3~4분기      | 3~4분기   |\n",
+      "|--------------|-----------|-------------------------|-----------|-------------------------|-----------|--------------|-----------|\n",
+      "| 1회차        | 1회차     | 2회차                   | 2회차     | 3회차                   | 3회차     | 4회차        | 4회차     |\n",
+      "| 신청 시기    | 지급 비율 | 신청 시기               | 지급 비율 | 신청 시기               | 지급 비율 | 신청 시기    | 지급 비율 |\n",
+      "| 협약 체결 시 | 20%       | 협약 체결 후 2개월 이내 | 46%       | 중간 평가 후 1개월 이내 | 9%        | 4분기 (10월) | 25%       |\n",
       "\n",
-      "| 현행 지역 구분    | 세부 지역 구분                                                          | 교통비(원)   |\n",
-      "|-------------------|-------------------------------------------------------------------------|--------------|\n",
-      "| 인천시내          | 강화군, 옹진군 및 도서지역 제외한 인천시내                              | 10,000       |\n",
-      "| 서울,안양,과천 외 | 서울,안양,과천,군포,의왕,안산,시흥,광명,부천,김포 外                    | 20,000       |\n",
-      "| 수원,분당,일산 외 | 수원,분당,일산,강화,영종도,화성 外(인천,서울 지역을 제외한 수도권 일원) | 25,000       |\n",
+      "※ 지급비율은 변동될 수 있으며, 중간평가 결과에 따라 3회차부터 지급을 유예할 수 있음\n",
       "\n",
-      "## 해외여비 지급기준(일부 발췌)\n",
+      "## □ 사업비 집행기간\n",
       "\n",
-      "|                                                              |    |                 | 재 비         | 재 비             | 재 비         |                                                                                              |\n",
-      "|--------------------------------------------------------------|----|-----------------|---------------|-------------------|---------------|----------------------------------------------------------------------------------------------|\n",
-      "| 구                                                           | 분 | 교 통 비        | 일 비 (1일당) | 체 숙박비 (1야당) | 식 비 (1일당) | 비 고                                                                                        |\n",
-      "| 교 수 부 교 수 부참여(3급) 이 상 조 교 수 전임강사 참사(4급) | 가 | 항공임 2등 운임 | 실비          | $35 $220          | $110          | 가 : 동경,뉴욕, 런던 파리,홍콩, LA, 모스크바,샌프란 시스코, 워싱턴 나 : '가'지역을 외한 지역 |\n",
-      "| 교 수 부 교 수 부참여(3급) 이 상 조 교 수 전임강사 참사(4급) | 나 | 〃              | 〃            | $35               | $160 $80      | 가 : 동경,뉴욕, 런던 파리,홍콩, LA, 모스크바,샌프란 시스코, 워싱턴 나 : '가'지역을 외한 지역 |\n",
-      "| 이 하                                                        | 가 | 항공임 3등      | 운임 실비     | $30               | $200 $85      | 가 : 동경,뉴욕, 런던 파리,홍콩, LA, 모스크바,샌프란 시스코, 워싱턴 나 : '가'지역을 외한 지역 |\n",
-      "| 이 하                                                        | 나 | 〃              | 〃            | $30               | $150 $60      | 가 : 동경,뉴욕, 런던 파리,홍콩, LA, 모스크바,샌프란 시스코, 워싱턴 나 : '가'지역을 외한 지역 |\n",
+      "- ○ '24. 1. 1. ~ '24. 12. 31. ※  동  기간  이외의 사용금액은 불인정 금액으로 간주하고 전액 반납해야 함 ※  단,  집행기간  연장에 대해서 사전 승인을 받을 시에는 그 기한까지는 인정\n",
       "\n",
-      "- 1. 같은 곳에 장기간 체재하는 경우의 일비 및 숙박비는 [---중략---] 감하여 지급한다.\n",
-      "- 2. 예산절감을 위해 필요한 경우 총장은 항공운임에 대해 별도의 기준을 정할수 있다.\n",
-      "- 3. '나'지역의 경우 공무의 형편이나 그 밖의 부득이한 사유로 상한액을 초과하여 숙박비를 지출하였을 때에는 '가'지역의 한도내에서 추가로 지급할 수 있다. 숙박비를 추가로 지급받 기 위해서는 영수증 및 세부사용 내역이 명시된 증빙을 갖추어 정산을 신청하여야 한다.\n",
-      "- 4. 워크숍, 세미나, 학회 등에 참석하기 위해 출장을 가는 경우 해당 주관기관에서 시행한 공문 등에서 별표의 금액을 초과하는 숙박비 금액을 명시하거나 숙박기관을 지정한 때에는 그 금액 을 선지급하고 주관기관에서 시행한 참석확인 공문 또는 증빙서류 등을 제출한다.\n"
+      "## 2 사업비 계좌관리 및 사용원칙\n",
+      "\n",
+      "## □ 사업비 계좌관리\n",
+      "\n",
+      "- ○ ( 별도 계좌개설 필수 ) 각 지원 대상자는 당해 랩 운영지원금과 민간부담금을 관리하는 통장법인명의을 주관 참여기관 별로 각각 ( ) · 개설하고 해당 계좌와 연계된 연구비카드 , (KCA) 만 개설하여 사용\n",
+      "\n",
+      "## □ 사업비 사용원칙\n",
+      "\n",
+      "- ○ 총사업비는 당초 제시했던 사업계획에 따른 집행을 원칙으로 함\n",
+      "- ○ 원천징수 신고납부 대상인 인건비성 수당의 경우 소득세 등을 , 원천징수하고 나머지 차액을 수령인의 계좌에 송금하여야 하며 , 원천징수한 소득세 등은 제작비로 인정함원천징수지급조서 작성 첨부 ( )\n",
+      "\n",
+      "- ○ 부가가치세 관세 등 사후 환급이나 공제받을 수 있는 금액은 집행금액에서 , 제외함을 원칙으로 하되 사후 환급이 불가능한 경우에는 예외로 함 ,\n",
+      "- ○ 보조금의 적정한 사용을 위하여 프로젝트와 관련 없는 집행과 제한 업종 가맹점 등에서는 전용 사업비 카드를 사용할 수 없음\n",
+      "- ○ 선정 랩의 임직원 직계존비속을 포함 ( ) 등이 운영하는 업체 또는 단체 계열 관계에 있는 업체 또는 단체와는 거래할 수 없음 ※  컨소시엄 간 계약 불가\n",
+      "- ○ 보조금이 투명하고 효율적인 집행을 위하여 수요물자 구매나 시설공사계약을 체결할 때 아래의 금액에 한하여 조달청나라장터 등을 이용해야 함 ( )\n",
+      "- -2 천만원을 초과하는 물품 및 용역 구매\n",
+      "- -2 억원을 초과하는 시설공사 계약\n",
+      "- ○ 모든 증빙서류는 사업기간 종료 후  년간 보관해야 하며 협회가 5 , 요구할시 즉시 응하여야 함\n",
+      "- ○ 정부지원금은 콘텐츠 제작 관련 이외의 용도로 사용할 수 없음\n",
+      "\n",
+      "## &lt; 정부지원금 사용 불가항목 &gt;\n",
+      "\n",
+      "| o 유류비 사용                            | o 유흥업소 등에서의 사용금액         |\n",
+      "|------------------------------------------|--------------------------------------|\n",
+      "| o 자가시설 이용료, 감가상각비            | o 사업과 관련 없는 자체보유 저작권료 |\n",
+      "| o 관세, 부가세 등 환급이나 공제받는 금액 | o 술/담배 등의 기호상품에 대한 사용  |\n",
+      "| o 본 사업의 목적과 관련 없는 공간 임차료 | o 이외 ICT사업 비목별 불인정 기준    |\n",
+      "\n",
+      "※  주관기관,  참여기관 사업비 편성 시 여비는 각 기관별로 산출하여 편성해야 함\n",
+      "\n",
+      "- ○ 모든 지출은 지출 원인행위 및 지출결과에 대해 증빙할 수 있는 증빙서류가 구비 되어야 하며 지출목적이 합당한 경우에만 인정함 , ※  [붙임]  ICT사업  사업비 산정 및 정산 등에 관한 기준 및 세부내용 참조\n",
+      "\n",
+      "## □ 인건비 편성\n",
+      "\n",
+      "- ○ 아래 랩 참여인력별 등급 및 월 임금기준에 따라 참여인력 인건비 지원\n",
+      "- -참여인력 중 대학 및 대학원 교수 직위자들은 인건비 지급을 불인정하고 그 외 참여인력에 대해서는 100% 까지 인정\n",
+      "\n",
+      "## 예)  1)  교수 직위자\n",
+      "\n",
+      "- ※  지원대학(기업) 교수 직위자의 인건비는 불인정\n",
+      "- 2)  그  외  참여  인력(박사과정의 경우)\n",
+      "- ※  월  임금  3,000,000원  기준  :  과제 참여율 50%(1,500,000원)로 편성할 경우, 편성된 참여율의 100%(1,500,000원)까지 인정\n",
+      "\n",
+      "## &lt; 랩 참여인력별 등급 및 월 임금기준* &gt;\n",
+      "\n",
+      "| 등 급        | 월 임금 (100%참여율 기준)   | 자 격 기 준                                                                                                          |\n",
+      "|--------------|-----------------------------|----------------------------------------------------------------------------------------------------------------------|\n",
+      "| 박사후연구원 | 소속기관 인건비 지급기준    | 콘텐츠 사업, R&D 등 역할을 수행하는 실무자로, 당해 연구분야에 대해 박사급 전문지식을 보유한 자, 박사 학위를 보유한자 |\n",
+      "| 박사과정     | 월 3,000,000원 이상당해     | 콘텐츠 사업, R&D 등 역할을 수행하는 실무자로, 연구분야에 대해 박사급 전문지식을 보유한 자, 박사 대학원 과정인자      |\n",
+      "| 석사과정     | 월2,200,000원 이상          | 콘텐츠 사업, R&D 등 역할을 수행하는 실무자로, 당해 연구분야에 대해 석사급 전문지식을 보유한 자, 석사 대학원 과정인자 |\n",
+      "| 학사과정     | 월1,300,000원 이상          | 콘텐츠 사업 및 R&D 수행하는 자로써 학사과정인자, 회계, 정산, 예산 등 업무처리를 수행하는 자                          |\n",
+      "\n",
+      "- ※  통합과정의 경우 학사, 석사, 박사과정의 기준을 고려하여 소속기관의 장이 별도로 정한 금액으로 월 임금 기준 편성\n",
+      "\n",
+      "※  본 인건비 기준단가는 참여율 100%로 산정한 것이며, 참여율을 달리하는 경우 증감하여 적용 *  국가연구개발사업 연구개발비 사용기준 제 40조(정부출연기관 학생인건비 사용기준) 준용\n"
      ]
     }
    ],
