--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,80 +66,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m wines \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m n\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
-     ]
-    }
-   ],
-   "source": [
-    "n = int(input())\n",
-    "\n",
-    "wines = [0] * n\n",
-    "for i in range(n):\n",
-    "    wines[i] = int(input())\n",
-    "\n",
-    "dp = [[0]*3 for _ in range(n+1)]\n",
-    "\n",
-    "dp[1][0] = 0\n",
-    "dp[1][1] = wines[0]   # drink glass 1, no previous\n",
-    "dp[1][2] = 0          # cannot have two in a row yet\n",
-    "\n",
-    "for i in range(2, n+1):\n",
-    "    w = wines[i-1]\n",
-    "    \n",
-    "    dp[i][0] = max(dp[i-1])        \n",
-    "    dp[i][1] = dp[i-1][0] + w     \n",
-    "    dp[i][2] = dp[i-1][1] + w           \n",
-    "\n",
-    "print( max(dp[n]) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\n",
-      "\"재귀함수가 뭔가요?\"\n",
-      "\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
-      "마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
-      "그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
-      "____\"재귀함수가 뭔가요?\"\n",
-      "____\"재귀함수는 자기 자신을 호출하는 함수라네\"\n",
-      "____라고 답변하였지.\n",
-      "라고 답변하였지.\n"
+      "<3, 6, 2, 7, 5, 1, 4>\n"
      ]
     }
    ],
    "source": [
-    "def answer(n, count):\n",
-    "    print(f\"{'____'*count}\\\"재귀함수가 뭔가요?\\\"\")\n",
-    "    if n > 0:\n",
-    "        print(f\"{'____'*count}\\\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\\n{'____'*count}마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\\n{'____'*count}그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\\\"\")\n",
-    "        answer(n-1, count + 1)\n",
-    "    else:  \n",
-    "        print(f\"{'____'*count}\\\"재귀함수는 자기 자신을 호출하는 함수라네\\\"\")\n",
-    "        print(f\"{'____'*count}라고 답변하였지.\")\n",
-    "        return\n",
-    "    print(f\"{'____'*count}라고 답변하였지.\")\n",
-    "    \n",
+    "import sys\n",
+    "import heapq\n",
+    "\n",
+    "# input = sys.stdin.readline\n",
+    "\n",
     "n = int(input())\n",
-    "print(\"어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\")\n",
-    "answer(n, 0)"
+    "\n",
+    "heap = []\n",
+    "\n",
+    "for i in range(n):\n",
+    "    num = int(input())\n",
+    "    if num == 0:\n",
+    "        if len(heap) == 0:\n",
+    "            print(0)\n",
+    "        else:\n",
+    "            print(heapq.heappop(heap))\n",
+    "    else:\n",
+    "        heapq.heappush(heap, [-num, num])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import heapq\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "heap = []\n",
+    "\n",
+    "for i in range(n):\n",
+    "    num = int(input())\n",
+    "    if num == 0:\n",
+    "        if len(heap) == 0:\n",
+    "            print(0)\n",
+    "        else:\n",
+    "            print(heapq.heappop(heap)[1])\n",
+    "    else:\n",
+    "        heapq.heappush(heap, [-num, num])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -1\n",
+      "1 1\n",
+      "2 2\n",
+      "3 3\n",
+      "3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "\n",
+    "coords=[]\n",
+    "for i in range(n):\n",
+    "    a, b = map(int, input().split())\n",
+    "    coords.append([a, b])\n",
+    "\n",
+    "coords.sort()\n",
+    "\n",
+    "for i in coords:\n",
+    "    print(i[0], i[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k, n = map(int, input().split())\n",
+    "array = []\n",
+    "for i in range(k):\n",
+    "    array.append(int(input()))\n",
+    "\n",
+    "def binary_search(array, target):\n",
+    "    low = 1\n",
+    "    high = max(array)\n",
+    "    result = 0\n",
+    "\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "\n",
+    "        count = 0\n",
+    "        for length in array:\n",
+    "            count += length // mid\n",
+    "        \n",
+    "        # 만약 목표 개수(n) 이상을 만들 수 있다면 더 긴 길이가 가능한지 탐색 (low를 올림)\n",
+    "        if count >= target:\n",
+    "            result = mid\n",
+    "            low = mid + 1\n",
+    "        # 목표 개수를 만들 수 없다면, 길이를 더 짧게 잘라야 함 (high를 내림)\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "            \n",
+    "    return result\n",
+    "\n",
+    "answer = binary_search(array, n)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def bfs(graph, start):\n",
+    "    visit_order = []\n",
+    "    visited = set()\n",
+    "    have_to_visit = deque()\n",
+    "    \n",
+    "    visited.add(start)\n",
+    "    have_to_visit.append(start)\n",
+    "    \n",
+    "    while have_to_visit:\n",
+    "        vertex = have_to_visit.popleft()\n",
+    "        visit_order.append(vertex)\n",
+    "        \n",
+    "        for node in graph[vertex]:\n",
+    "            if node not in visited:\n",
+    "                visited.add(node) \n",
+    "                have_to_visit.append(node)\n",
+    "                \n",
+    "    return visit_order\n",
+    "\n",
+    "\n",
+    "def dfs(graph, start):\n",
+    "    visit_order = []\n",
+    "    visited = set()\n",
+    "    have_to_visit = deque()\n",
+    "    \n",
+    "    visited.add(start)\n",
+    "    have_to_visit.append(start)\n",
+    "    \n",
+    "    while have_to_visit:\n",
+    "        vertex = have_to_visit.pop()\n",
+    "        visit_order.append(vertex)\n",
+    "        \n",
+    "        for node in reversed(graph[vertex]):\n",
+    "            if node not in visited:\n",
+    "                visited.add(node) \n",
+    "                have_to_visit.append(node)\n",
+    "                \n",
+    "    return visit_order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = 10\n",
+    "\n",
+    "board = [1] * (N + 1)\n",
+    "\n",
+    "for i in range(N, -1, -1):\n",
+    "    if i % 3 == 0:\n",
+    "        board[i//3] = min(board[i] + 1, board[i//3])\n",
+    "    if i % 2 == 0:\n",
+    "        board[i//2] = min(board[i] + 1, board[i//2])\n",
+    "    if i - 1 > 0:\n",
+    "        board[i-1] = board[i] + 1\n",
+    "        \n",
+    "board\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n,k = 4, 7\n",
+    "stuffs = [\n",
+    "    [6, 13],\n",
+    "    [4, 8],\n",
+    "    [3, 6],\n",
+    "    [5, 12]\n",
+    "]\n",
+    "\n",
+    "dp = [[0 for _ in range(k+1)] for _ in range(n+1)]\n",
+    "\n",
+    "for i in range(1, n+1):\n",
+    "    weight = stuffs[i][0]\n",
+    "    value = stuffs[i][1]\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -166,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
