--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -318,7 +318,45 @@
     "    weight = stuffs[i][0]\n",
     "    value = stuffs[i][1]\n",
     "    \n",
-    "    "
+    "    for j in range(k+1):\n",
+    "        if j < weight:\n",
+    "            dp[i][j] = dp[i-1][j]\n",
+    "        else:\n",
+    "            dp[i][j] = max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 13, 13],\n",
+       " [0, 0, 0, 0, 8, 8, 13, 13],\n",
+       " [0, 0, 0, 6, 8, 8, 13, 14],\n",
+       " [0, 0, 0, 6, 8, 12, 13, 14]]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "n, c = map(int, input().split())\n",
+    "\n",
+    "nums = list(map(int, input().split()))\n",
+    "\n",
+    "dict = defaultdict(int)\n",
+    "\n",
+    "for num in nums:\n",
+    "    dict[num] += 1\n",
+    "    \n"
    ]
   },
   {
