--- a/코딩 테스트/인공지능.ipynb
+++ b/코딩 테스트/인공지능.ipynb
@@ -2,62 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이미지 배치(Batch)의 형태(shape): torch.Size([32, 3, 224, 224])\n",
+      "레이블 배치(Batch)의 형태(shape): torch.Size([32])\n",
+      "첫 번째 이미지의 레이블: 5\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from PIL import Image\n",
     "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torchvision\n",
+    "from torch.utils.data import Dataset, DataLoader, random_split\n",
     "import torchvision.transforms as transforms\n",
     "\n",
-    "train_transform = transforms.Compose([\n",
-    "    transforms.RandomCrop(32, 4),\n",
-    "    transforms.RandomVerticalFlip(),\n",
+    "\n",
+    "class CustomImageDataset(Dataset):\n",
+    "    def __init__(self, root_dir, transform=None):\n",
+    "        self.root_dir = root_dir\n",
+    "        self.transform = transform \n",
+    "        self.image_paths = []\n",
+    "        self.labels = []\n",
+    "        \n",
+    "        class_names = sorted([d for d in os.listdir(root_dir) if os.path.isdir(os.path.join(root_dir, d))])\n",
+    "        # class_names = sorted(os.listdir(root_dir))\n",
+    "        \n",
+    "        self.class_to_idx = {class_name: i for i, class_name in enumerate(class_names)}\n",
+    "        \n",
+    "        for class_name in class_names:\n",
+    "            class_path = os.path.join(root_dir, class_name)\n",
+    "            for image_name in os.listdir(class_path):\n",
+    "                if image_name.lower().endswith((\".png\", '.jpg', '.jpeg')):\n",
+    "                    self.image_paths.append(os.path.join(class_path, image_name))\n",
+    "                    self.labels.append(self.class_to_idx[class_name])\n",
+    "                    \n",
+    "    def __len__(self):\n",
+    "        return len(self.image_paths)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        image_path = self.image_paths[idx]\n",
+    "        image = Image.open(image_path).convert(\"RGB\")\n",
+    "        label = self.labels[idx]\n",
+    "        \n",
+    "        if self.transform:\n",
+    "            image = self.transform(image)\n",
+    "            \n",
+    "        return image, label\n",
+    "\n",
+    "\n",
+    "data_transforms = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
     "                         std=[0.229, 0.224, 0.225])\n",
     "])\n",
     "\n",
-    "test_transform = transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-    "                         std=[0.229, 0.224, 0.225])\n",
-    "])\n",
+    "data_path = \"data/output_frames/\"\n",
     "\n",
-    "train_dataset = torchvision.datasets.CIFAR10(\"./data\", True, train_transform, download=False)\n",
-    "test_dataset = torchvision.datasets.CIFAR10(\"./data\", False, test_transform, download=False)\n",
+    "custom_dataset = CustomImageDataset(root_dir=data_path, transform=data_transforms)\n",
     "\n",
-    "train_loader = torch.utils.data.DataLoader(train_dataset, 64, True, num_workers=2)\n",
-    "test_loader = torch.utils.data.DataLoader(test_dataset, 64, True, num_workers=2)\n",
+    "dataset_size = len(custom_dataset)\n",
+    "train_size = int(dataset_size * 0.8)\n",
+    "test_size = dataset_size - train_size\n",
     "\n",
-    "classes = train_dataset.classes"
+    "train_dataset, test_dataset = random_split(custom_dataset, [train_size, test_size])\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=0) \n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=True, num_workers=0) \n",
+    "\n",
+    "image, labels = next(iter(train_loader))\n",
+    "print(f\"이미지 배치(Batch)의 형태(shape): {image.shape}\")\n",
+    "print(f\"레이블 배치(Batch)의 형태(shape): {labels.shape}\")\n",
+    "print(f\"첫 번째 이미지의 레이블: {labels[0]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([64, 10])"
+       "torch.Size([32, 10])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +113,7 @@
     "\n",
     "        self.flatten = nn.Flatten()\n",
     "        \n",
-    "        self.fc1 = nn.Linear(64*8*8, 512)\n",
+    "        self.fc1 = nn.Linear(64*56*56, 512)\n",
     "        self.fc2 = nn.Linear(512, 10)\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -96,7 +132,7 @@
     "        return x\n",
     "    \n",
     "model = SimpleCNN()\n",
-    "x = torch.randn(64, 3, 32, 32)\n",
+    "x = torch.randn(32, 3, 224, 224)\n",
     "model(x).size()"
    ]
   },
